--- a/面向对象/类的默认基本构架/this指针.html
+++ b/面向对象/类的默认基本构架/this指针.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../css(所有网页公共样式表).css">
+    <link rel="stylesheet" href="../../css(所有网页公共样式表).css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>this指针 - 阿东的知识库</title>
@@ -50,7 +50,7 @@
             }
         }
         // 加载导航栏
-        loadHtmlFile("./导航栏(面向对象公共区域).html");
+        loadHtmlFile("../导航栏(面向对象公共区域).html");
     </script>
 </body>
 </html>
