--- a/面向对象/导航栏(面向对象公共区域).html
+++ b/面向对象/导航栏(面向对象公共区域).html
@@ -1,8 +1,18 @@
- <ul>
-        <h1>封装</h1>
-        <li><a href="https://ruanzhaodong.github.io/JAVA-Knowledge-point/JAVA//封装/1.基本概念">基本概念</a></li>
-        <li><a href="https://ruanzhaodong.github.io/JAVA-Knowledge-point/JAVA/封装/2.访问权限修饰符.html">访问权限修饰符</a></li>
+<!---\
+https://ruanzhaodong.github.io/CJiaJia/面向对象
 
+        <h1></h1>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/"></a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/"></a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/"></a></li>
+--->
+
+<ul>
+        <h1>类的默认基本构架</h1>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/类的默认基本构架/默认构造函数.html">默认构造函数</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/类的默认基本构架/默认析构函数.html">默认析构函数</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/类的默认基本构架/默认拷贝构造函数.html">默认拷贝构造函数</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/类的默认基本构架/this指针.html">this指针</a></li>
 
          
-     </ul>
+</ul>
