--- a/面向对象/导航栏(面向对象公共区域).html
+++ b/面向对象/导航栏(面向对象公共区域).html
@@ -14,5 +14,20 @@ https://ruanzhaodong.github.io/CJiaJia/面向对象
         <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/类的默认基本构架/默认拷贝构造函数.html">默认拷贝构造函数</a></li>
         <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/类的默认基本构架/this指针.html">this指针</a></li>
 
-         
+        <h1>封装</h1>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/封装/基本概念.html">基本概念</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/封装/访问权限修饰符.html">访问权限修饰符</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/封装/常量成员方法.html">常量成员方法</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/封装/友元机制.html">友元机制</a></li>
+
+        <h1>继承</h1>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/基本概念.html">基本概念</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/继承方式.html">继承方式</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/多继承.html"></a>多继承</li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/虚继承.html"></a>虚继承</li>
+
+        <h1>多态</h1>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/">基本概念</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/"></a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/"></a></li>
 </ul>
