--- a/面向对象/导航栏(面向对象公共区域).html
+++ b/面向对象/导航栏(面向对象公共区域).html
@@ -27,7 +27,8 @@ https://ruanzhaodong.github.io/CJiaJia/面向对象
         <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/虚继承.html"></a>虚继承</li>
 
         <h1>多态</h1>
-        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/">基本概念</a></li>
-        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/"></a></li>
-        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/"></a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/基本概念.html">基本概念</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/多态分类.html">多态分类</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/方法重载与方法重写.html">方法重载与方法重写</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/方法重载与方法重写的对比.html">方法重载与方法重写的对比</a></li>
 </ul>
