--- a/面向对象/导航栏(面向对象公共区域).html
+++ b/面向对象/导航栏(面向对象公共区域).html
@@ -23,8 +23,8 @@ https://ruanzhaodong.github.io/CJiaJia/面向对象
         <h1>继承</h1>
         <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/基本概念.html">基本概念</a></li>
         <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/继承方式.html">继承方式</a></li>
-        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/多继承.html"></a>多继承</li>
-        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/虚继承.html"></a>虚继承</li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/多继承.html">多继承</a></li>
+        <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/继承/虚继承.html">虚继承</a></li>
 
         <h1>多态</h1>
         <li><a href="https://ruanzhaodong.github.io/CJiaJia/面向对象/多态/基本概念.html">基本概念</a></li>
